--- a/package.json
+++ b/package.json
@@ -26,6 +26,10 @@
     "class-variance-authority": "^0.7.1",
     "cross-env": "^7.0.3",
     "framer-motion": "^12.6.3",
+    "fumadocs-core": "^13.4.1",
+    "fumadocs-docgen": "^1.1.0",
+    "fumadocs-mdx": "^9.0.4",
+    "fumadocs-ui": "^13.4.1",
     "graphql": "^16.8.1",
     "lucide-react": "^0.487.0",
     "next": "15.2.3",
@@ -41,6 +45,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
+    "@types/mdx": "^2.0.13",
     "@types/node": "^22.5.4",
     "@types/react": "19.0.12",
     "@types/react-dom": "19.0.4",
