--- a/package.json
+++ b/package.json
@@ -12,28 +12,35 @@
     "generate:types": "cross-env NODE_OPTIONS=--no-deprecation payload generate:types",
     "lint": "cross-env NODE_OPTIONS=--no-deprecation next lint",
     "payload": "cross-env NODE_OPTIONS=--no-deprecation payload",
-    "start": "cross-env NODE_OPTIONS=--no-deprecation next start"
+    "start": "cross-env NODE_OPTIONS=--no-deprecation next start",
+    "generate:importMap": "payload generate:importMap"
   },
   "dependencies": {
     "@number-flow/react": "^0.5.9",
-    "@payloadcms/db-mongodb": "3.31.0",
-    "@payloadcms/next": "3.31.0",
-    "@payloadcms/payload-cloud": "3.31.0",
-    "@payloadcms/richtext-lexical": "3.31.0",
+    "@payloadcms/db-mongodb": "3.34.0",
+    "@payloadcms/next": "3.34.0",
+    "@payloadcms/payload-cloud": "3.34.0",
+    "@payloadcms/richtext-lexical": "^3.34.0",
+    "@payloadcms/ui": "3.34.0",
     "@radix-ui/react-dialog": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.0",
+    "@tabler/icons-react": "^3.31.0",
     "@tailwindcss/postcss": "^4.1.3",
+    "@tailwindcss/typography": "^0.5.16",
     "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "cross-env": "^7.0.3",
+    "domhandler": "^5.0.3",
     "framer-motion": "^12.6.3",
     "graphql": "^16.8.1",
+    "isomorphic-dompurify": "^2.23.0",
     "lucide-react": "^0.487.0",
+    "motion": "^12.6.3",
     "next": "15.2.3",
     "next-themes": "^0.4.6",
-    "payload": "3.31.0",
+    "payload": "3.34.0",
     "postcss": "^8.5.3",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
+    "react-dom": "19.1.0",
     "sharp": "0.32.6",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^3.4.1",
