--- a/package.json
+++ b/package.json
@@ -40,8 +40,10 @@
     "next-themes": "^0.4.6",
     "payload": "3.34.0",
     "postcss": "^8.5.3",
+    "react": "19.1.0",
     "react-dom": "19.1.0",
     "sharp": "0.32.6",
+    "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^3.4.1",
     "tailwindcss-animate": "^1.0.7"
