--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "@payloadcms/next": "3.34.0",
     "@payloadcms/payload-cloud": "3.34.0",
     "@payloadcms/richtext-lexical": "^3.34.0",
+    "@payloadcms/storage-s3": "^3.34.0",
     "@payloadcms/ui": "3.34.0",
     "@radix-ui/react-dialog": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.0",
+    "@t3-oss/env-nextjs": "^0.12.0",
     "@tabler/icons-react": "^3.31.0",
     "@tailwindcss/postcss": "^4.1.3",
     "@tailwindcss/typography": "^0.5.16",
@@ -51,7 +53,8 @@
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^3.4.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
