--- a/package.json
+++ b/package.json
@@ -49,6 +49,8 @@
     "postcss": "^8.5.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-markdown": "^10.1.0",
+    "remark-gfm": "^4.0.1",
     "sharp": "0.32.6",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
