--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^3.4.1",
     "tailwindcss-animate": "^1.0.7",
+    "tinycolor2": "^1.6.0",
     "zod": "^3.24.2"
   },
   "devDependencies": {
@@ -64,6 +65,7 @@
     "@types/node": "^22.5.4",
     "@types/react": "19.0.12",
     "@types/react-dom": "19.0.4",
+    "@types/tinycolor2": "^1.4.6",
     "eslint": "^9.16.0",
     "eslint-config-next": "15.2.3",
     "prettier": "^3.4.2",
