--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "generate:importMap": "payload generate:importMap"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.4.0",
     "@number-flow/react": "^0.5.9",
     "@oversightstudio/blur-data-urls": "^1.0.4",
     "@payloadcms/db-mongodb": "3.34.0",
@@ -24,12 +25,25 @@
     "@payloadcms/richtext-lexical": "^3.34.0",
     "@payloadcms/storage-s3": "^3.34.0",
     "@payloadcms/ui": "3.34.0",
+    "@radix-ui/react-accordion": "^1.2.10",
+    "@radix-ui/react-avatar": "^1.1.9",
+    "@radix-ui/react-checkbox": "^1.3.1",
     "@radix-ui/react-dialog": "^1.1.7",
+    "@radix-ui/react-dropdown-menu": "^2.1.14",
+    "@radix-ui/react-popover": "^1.1.13",
+    "@radix-ui/react-select": "^2.2.4",
     "@radix-ui/react-slot": "^1.2.0",
+    "@react-email/components": "^0.0.38",
     "@t3-oss/env-nextjs": "^0.12.0",
     "@tabler/icons-react": "^3.31.0",
     "@tailwindcss/postcss": "^4.1.3",
     "@tailwindcss/typography": "^0.5.16",
+    "@tanstack/react-query": "^5.75.5",
+    "@tanstack/react-query-devtools": "^5.75.5",
+    "@trpc/client": "next",
+    "@trpc/next": "next",
+    "@trpc/react-query": "next",
+    "@trpc/server": "next",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cross-env": "^7.0.3",
@@ -41,18 +55,24 @@
     "fumadocs-ui": "^13.4.1",
     "graphql": "^16.8.1",
     "isomorphic-dompurify": "^2.23.0",
+    "kbar": "0.1.0-beta.45",
     "lucide-react": "^0.487.0",
     "motion": "^12.6.3",
     "next": "15.2.3",
+    "next-nprogress-bar": "^2.4.7",
     "next-themes": "^0.4.6",
     "payload": "3.34.0",
     "postcss": "^8.5.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-hook-form": "^7.56.3",
+    "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
     "remark-gfm": "^4.0.1",
     "sharp": "0.32.6",
+    "slugify": "^1.6.6",
     "sonner": "^2.0.3",
+    "superjson": "^2.2.2",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^3.4.1",
     "tailwindcss-animate": "^1.0.7",
