--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,14 @@
 DATABASE_URI=mongodb://127.0.0.1/your-database-name
 PAYLOAD_SECRET=YOUR_SECRET_HERE
+NEXT_PUBLIC_WEBSITE_URL="localhost:3000"
+
+S3_ACCESS_KEY_ID=
+S3_BUCKET=
+S3_ENDPOINT=
+S3_REGION=
+S3_SECRET_ACCESS_KEY=
+
+#email
+RESEND_API_KEY=
+RESEND_SENDER_EMAIL=
+RESEND_SENDER_NAME=
