--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@number-flow/react": "^0.5.9",
     "@oversightstudio/blur-data-urls": "^1.0.4",
     "@payloadcms/db-mongodb": "3.34.0",
+    "@payloadcms/email-resend": "3.34.0",
     "@payloadcms/next": "3.34.0",
     "@payloadcms/payload-cloud": "3.34.0",
     "@payloadcms/richtext-lexical": "^3.34.0",
